<resources>
    <string name="app_name">GPS跟踪器</string>
    <string name="start_tracking">开始跟踪</string>
    <string name="stop_tracking">停止跟踪</string>
    <string name="export_gpx">导出GPX</string>
    <string name="status_indoor">室内模式</string>
    <string name="status_outdoor">室外模式</string>
    <string name="status_active">活跃状态</string>
    <string name="status_driving">驾驶状态</string>
    <string name="location_permission_required">需要位置权限才能使用GPS跟踪功能</string>
    <string name="background_location_permission_required">需要后台位置权限以持续跟踪位置</string>
    <string name="service_notification_title">GPS跟踪服务</string>
    <string name="service_notification_content">正在后台跟踪您的位置</string>
</resources>
